Fixed the background not covering the entire page when adding a new row of books.

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 .nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 0 36px;
     margin: 8px 0;
@@ -151,7 +151,8 @@ button:active {
     background-size: cover;
 }
 
-.footer, .sign {
+.footer,
+.sign {
     text-align: center;
     color: #E5E7EB;
 }
@@ -176,11 +177,23 @@ a:hover {
     background-size: cover;
 }
 
-div.image > p {
+.image>p {
     color: white;
     text-shadow:
         -1px -1px 0 #000,
         1px -1px 0 #000,
         -1px 1px 0 #000,
         1px 1px 0 #000;
+}
+
+.image {
+    transition: all .1s ease-in-out;
+}
+
+.image:hover {
+    transform: scale(1.05);
+}
+
+.image:active {
+    transform: scale(0.95);
 }
